@startuml

skinparam linetype ortho

rectangle #464D77{
class Robot << Root >> << Entity >>
class RobotType << Entity >>
class Drone  << Entity >>
class MobileRobot  << Entity >>

class RobotModel  << (v,#A4C2E5) ValueObject >>
class RobotBrand  << (v,#A4C2E5) ValueObject >>

class Code  << (v,orange) ValueObject >> << unique >>
class AvailableTask  << (v,#A4C2E5) ValueObject >>
class Nickname  << (v,#A4C2E5) ValueObject >>
class OperationStatus  << (v,#A4C2E5) ValueObject >>
class SerialNumber  << (v,#A4C2E5) ValueObject >>

}

Robot <|-u- MobileRobot
Robot <|-u- Drone
Robot "1"-l->"1" Code
Robot "*"-->"1" RobotType
Robot "*"-d->"1" OperationStatus
Robot "1"-->"1" Nickname
Robot "1"-->"1" SerialNumber

RobotType "*"-->"1" RobotModel
RobotType "*"-->"1" RobotBrand
RobotType "*"-->"*" AvailableTask

@enduml
